--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,138 @@
-.angular/cache
-.vercel
-.angular
-.vscode
-.env
-files.txt
-together.py
-VF.py
-frontend/node_modules
-frontend/api-client
-frontend/.vercel
+# Angular специфичные файлы
+/.angular
+/cache
+/compiled
 frontend/.angular
-frontend/dist
+frontend/.vscode
+frontend/.vercel
+.gitignore
+
+# Логи
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# IDEs и редакторы
+/.vscode/*
+!.vscode/extensions.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/settings.json
+/.idea
+/.vs
+*.swp
+*.swo
+*~
+
+# Runtime данные
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Директория покрытия кода
+/coverage
+/*/coverage/*
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+.env.test
+.env.production
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Parcel-bundler cache
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Temporary folders
+tmp/
+temp/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Distribution build
+/dist
+/dist-ssr
+*/dist/*
+
+# Serverless directories
+.serverless/
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Angular CLI
+.angular/cache
+
+# Production builds
+browser/
+server/
+
+# Temporary files
+*.tmp
+*.temp
