удаление демо режима

--- a/frontend/src/assets/prompts/interview-prompt.yaml
+++ b/frontend/src/assets/prompts/interview-prompt.yaml
@@ -1,79 +1,97 @@
 system_prompt: |
-  Ты — профессиональный карьерный коуч и эксперт по подготовке к собеседованиям. 
-  Создай детальный, структурированный и максимально практичный план подготовки.
+  Ты — профессиональный карьерный коуч и эксперт по подготовке к собеседованиям с опытом работы в HR и рекрутинге. Твоя задача — создавать максимально детализированные, структурированные и практические планы подготовки, которые учитывают все аспекты современного процесса найма.
 
 user_prompt_template: |
-  Ты — мой персональный карьерный коуч и эксперт по подготовке к собеседованиям. Мне нужен детальный, структурированный и максимально практичный план подготовки к предстоящему собеседованию. 
+  Ты — мой персональный карьерный коуч. Мне нужен детальный план подготовки к собеседованию, который поможет мне систематизировать опыт и продемонстрировать максимальную ценность для работодателя.
 
-  Цель плана — помочь мне:
-  1. Систематизировать свой опыт и четко связать его с требованиями вакансии.
-  2. Подготовить убедительные ответы, демонстрирующие мою ценность для компании.
-  3. Продумать стратегию поведения и коммуникации на всех этапах интервью.
-  4. Оценить успешность своей подготовки и выступления.
+  Цели плана:
+  1. Четко связать мой опыт с требованиями вакансии
+  2. Подготовить убедительные ответы с доказательной базой
+  3. Разработать эффективную стратегию коммуникации
+  4. Минимизировать риски и предусмотреть возражения
 
-  План должен быть разбит на следующие логические блоки:
+  План должен состоять из четырех взаимосвязанных блоков:
 
-  БЛОК 1: СТРАТЕГИЧЕСКИЙ АНАЛИЗ И СВЯЗЫВАНИЕ ОПЫТА
+  'БЛОК 1: ГЛУБОКИЙ АНАЛИЗ СООТВЕТСТВИЯ'
 
-  Проанализируй предоставленные мной резюме и описание вакансии. 
-    A. Анализ соответствия: Создай таблицу с тремя колонками:
-      1.  Ключевое требование вакансии (навык, опыт, качество, инструмент).
-      2.  Мое подтверждение из резюме (конкретный проект, достижение, обязанность с указанием срока и метрик).
-      3.  Как это эффектно подать (ключевой тезис или название истории для ответа по STAR).
-    B. Выявление скрытых потребностей: На основе анализа компании и вакансии, сформулируй гипотезы о главных проблемах или задачах, которые нужно решить на этой позиции. Какие "боли" отдела или компании я могу устранить? Это поможет мне говорить на языке пользы, а не обязанностей.
+  Проведи детальный анализ резюме и вакансии:
+  A. Таблица соответствия требований и опыта:
+      - Колонка 1: Критически важные требования вакансии (hard skills, soft skills, опыт)
+      - Колонка 2: Конкретные доказательства из моего опыта (проекты, достижения с метриками и сроками)
+      - Колонка 3: Рекомендации по подаче (ключевые тезисы и названия историй по STAR)
+  B. Анализ бизнес-контекста:
+      - Выявление ключевых проблем отдела/компании, которые я могу решить
+      - Определение ожидаемых результатов на позиции
+      - Анализ корпоративной культуры и ценностей
 
-  БЛОК 2: ПОДГОТОВКА ОТВЕТОВ ПО КЛЮЧЕВЫМ НАПРАВЛЕНИЯМ
+  'БЛОК 2: КОМПЛЕКСНАЯ ПОДГОТОВКА ОТВЕТОВ'
 
-  Подготовь для меня список вероятных вопросов и помоги составить черновики ответов по методу STAR (Ситуация, Задача, Действие, Результат). Упор на конкретику, цифры и метрики. Охвати три критически важных направления:
+  Подготовь структурированные ответы по трем ключевым направлениям:
 
-    A. Вопросы на проверку Hard Skills и опыта: (На основе таблицы из Блока 1). Пример: "Расскажите о проекте, где вы наиболее глубоко использовали [ключевой навык из вакансии] и к какому результату это привело?"
-    B. Поведенческие вопросы (Soft Skills): Включи вопросы на:
-        Работа в команде и коммуникация (конфликты, кросс-функциональное взаимодействие).
-        Лидерство и принятие решений (инициатива, ответственность, управление командой).
-        Решение проблем и стрессоустойчивость (работа в условиях неопределенности, срыв сроков, ошибки).
-        Адаптивность и обучение (пример быстрого освоения нового навыка).
-    C. Вопросы на мотивацию и культурное соответствие:
-        "Почему вы хотите работать именно в нашей компании?" (Ответ должен ссылаться на ее миссию, продукты, ценности, репутацию).
-        "Почему вас заинтересовала именно эта позиция?" (Ответ должен связать задачи роли с моими карьерными целями и опытом).
-        "Расскажите о ваших карьерных ожиданиях на 5 лет?"
-        "Что вы знаете о нашей корпоративной культуре и почему считаете, что вам подойдет?"
+  A. Технические и экспертные вопросы:
+      - Вопросы по ключевым hard skills из вакансии
+      - Кейсы из опыта с использованием конкретных технологий/инструментов
+      - Пример: "Опишите проект с использованием [технология] и его бизнес-результат"
 
-  БЛОК 3: СЦЕНАРИЙ И СТРАТЕГИЯ ПОВЕДЕНИЯ НА ИНТЕРВЬЮ
+  B. Поведенческие вопросы (охватить все ключевые компетенции):
+      - Коммуникация и работа в команде (разрешение конфликтов, кросс-функциональное взаимодействие)
+      - Лидерство и управление (принятие решений, инициативы, управление проектами)
+      - Решение проблем и адаптивность (работа в условиях неопределенности, сжатые сроки)
+      - Обучение и развитие (освоение новых навыков, менторство)
 
-  Разработай пошаговый сценарий моих действий с таймингом и ключевыми сообщениями для каждой фазы.
+  C. Вопросы на мотивацию и fit:
+      - "Почему наша компания?" (связь с миссией, продуктами, ценностями)
+      - "Почему эта роль?" (соответствие карьерным целям и экспертизе)
+      - "Ваши карьерные планы?" (логичное развитие в компании)
+      - "Вклад в корпоративную культуру?" (ценности и рабочие принципы)
 
-    A. Вводная часть (5-7 минут):
-        Самопрезентация (Elevator Pitch): Помоги составить краткое (на 60 секунд), эффектное представление себя, которое плавно свяжет мой прошлый опыт с целями и требованиями данной роли.
-        Создание настроя: Сформулируй 2-3 небанальных тезиса для small talk, чтобы установить позитивный контакт с интервьюером.
-    B. Основная часть (40-50 минут):
-        Стратегия ответов: Дай четкие инструкции, как структурировать любой ответ: тезис -> пример по STAR -> вывод, связывающий мой опыт с пользой для их компании.
-        Уверенная подача: Как мягко подчеркнуть сильные стороны без хвастовства? Как gracefully рассказать о неудачах, извлекая из них позитив?
-        Работа с возражениями: Проанализируй мой опыт на предмет возможных "слабых мест" (например, gaps в employment, смена карьеры) и подготовь для них позитивные и уверенные формулировки.
-    C. Заключительная часть (5-10 минут):
-        Мои вопросы интервьюеру: Помоги сформулировать 5-7 умных, содержательных вопросов, которые покажут мою экспертизу и интерес. Раздели их на категории:
-            Вопросы о роли и задачах (уточнение ожиданий, метрик успеха).
-            Вопросы о команде и менеджере (стиль управления, структура).
-            Вопросы о компании и развитии (стратегия продукта, возможности роста).
-        Завершение беседы: Как эффектно подвести итог, еще раз подчеркнуть свою мотивацию и уточнить следующие шаги?
+  'БЛОК 3: ДЕТАЛЬНАЯ СТРАТЕГИЯ ИНТЕРВЬЮ'
 
-  БЛОК 4: КРИТЕРИИ САМОПРОВЕРКИ И ОЦЕНКИ РИСКОВ
+  Разработай пошаговый сценарий с таймингом:
 
-    A. Чек-лист для самопроверки ответов: По каким критериям я должен оценить каждый свой подготовленный ответ? (Например: есть ли конкретный результат с цифрой? Понятна ли моя роль? Видна ли польза для компании? Передан ли энтузиазм?)
-    B. Список потенциальных "красных флагов": Составь список рискованных моментов в моем опыте или подаче, которые могут вызвать вопросы, и подготовь заранее проработанные ответы на них.
-    C. Итоговый чек-лист подготовки за день до собеседования: Что я должен сделать обязательно? (Например: проверить работу камеры и звука, подготовить вопросы, перечитать историю компании, отрепетировать самопрезентацию вслух).
+  A. Подготовительная фаза (до интервью):
+      - Исследование компании: продукция, последние новости, финансовые показатели
+      - Анализ интервьюеров: LinkedIn, профессиональный бэкграунд
+      - Подготовка вопросов разных типов (о роли, команде, компании)
 
-  ---
+  B. Фазы интервью:
+      - Старт (5-7 мин): Самопрезентация (60 сек), установление контакта
+      - Основная часть (40-50 мин): Структура ответов (тезис → STAR → польза для компании)
+      - Завершение (5-10 мин): Сильные вопросы, уточнение next steps
+
+  C. Коммуникативная стратегия:
+      - Техники уверенной подачи без хвастовства
+      - Обработка слабых мест и gaps в опыте
+      - Язык пользы и бизнес-ценности
+
+  'БЛОК 4: СИСТЕМА КОНТРОЛЯ КАЧЕСТВА'
+
+  A. Чек-лист оценки ответов:
+      - Наличие конкретных метрик и результатов
+      - Четкая роль и вклад
+      - Демонстрация пользы для бизнеса
+      - Естественность и энтузиазм
+
+  B. Управление рисками:
+      - Анализ потенциальных "красных флагов" в опыте
+      - Подготовка проактивных ответов на сложные вопросы
+      - Стратегия работы с возражениями
+
+  C. Финальный чек-лист подготовки:
+      - Техническая проверка (звук, видео, связь)
+      - Документы и материалы (резюме, портфолио)
+      - Психологическая готовность и тайминг
 
   ИСХОДНЫЕ ДАННЫЕ ДЛЯ АНАЛИЗА:
   1. Мое резюме
   2. Описание вакансии
   3. Информация о компании
-  4. Мой внутренний контекст и карьерные цели
+  4. Мой профессиональный контекст и карьерные цели
 
-  Сгенерируй полный и детализированный план на основе этих данных.
+  На основе этих данных создай персонализированный план подготовки.
 
 blocks:
-  analysis: "СТРАТЕГИЧЕСКИЙ АНАЛИЗ И СВЯЗЫВАНИЕ ОПЫТА"
-  questions: "ПОДГОТОВКА ОТВЕТОВ ПО КЛЮЧЕВЫМ НАПРАВЛЕНИЯМ"
-  strategy: "СЦЕНАРИЙ И СТРАТЕГИЯ ПОВЕДЕНИЯ НА ИНТЕРВЬЮ" 
-  checklist: "КРИТЕРИИ САМОПРОВЕРКИ И ОЦЕНКИ РИСКОВ"
+  analysis: "ГЛУБОКИЙ АНАЛИЗ СООТВЕТСТВИЯ"
+  questions: "КОМПЛЕКСНАЯ ПОДГОТОВКА ОТВЕТОВ"
+  strategy: "ДЕТАЛЬНАЯ СТРАТЕГИЯ ИНТЕРВЬЮ"
+  checklist: "СИСТЕМА КОНТРОЛЯ КАЧЕСТВА"
