--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "@angular/animations": "^20.1.4",
     "@angular/cdk": "^20.1.4",
     "@angular/common": "^20.1.4",
-    "@angular/compiler": "20.1.4",
+    "@angular/compiler": "^20.1.4",
     "@angular/core": "^20.1.4",
     "@angular/fire": "^20.0.0",
     "@angular/forms": "^20.1.4",
